@@ -580,7 +580,7 @@
  ;;; as PCL gets more integrated into the system, we'd like to
  ;;; bootstrap things like classes at the same time as the rest of the
  ;;; type system.
- ("src/pcl/walk" :not-host)
+ ("src/pcl/walk")
  ("src/pcl/low" :not-host)
  ("src/pcl/macros" :not-host)
  ("src/pcl/ecd" :not-host)
